--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "@types/cors": "^2.8.5",
     "cors": "^2.8.5",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "rxjs": "^6.5.1"
   },
   "devDependencies": {
     "@types/express": "^4.16.1"
