--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "bootstrap": "^4.3.1",
     "core-js": "^2.5.4",
+    "jquery": "^3.4.1",
     "request": "^2.88.0",
     "rxjs": "~6.2.0",
     "underscore": "^1.9.1",
